--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "o2sql",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "A tool to generate postgres queries",
   "main": "index.js",
   "scripts": {
     "test": "node ./test/index.js"
   },
   "dependencies": {
+  },
+  "devDependencies": {
+    "eslint": "^4.15.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-plugin-import": "^2.13.0"
   },
-  "devDependencies": {
-    "eslint": "^4.15.0"
-  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/qdechochen/osql.git"
+    "url": "https://github.com/qdechochen/o2sql.git"
   },
   "files": [
     "lib",
