--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
     "no-unused-vars": ["error", { "argsIgnorePattern": "next" }],
     "class-methods-use-this": 0,
     "prefer-destructuring": 0,
-    "no-use-before-define": 0
+    "no-use-before-define": 0,
+    "arrow-parens": ["error", "as-needed"]
   },
   "parserOptions": {
     "ecmaVersion": 2017
