--- a/.eslintrc
+++ b/.eslintrc
@@ -1,20 +1,15 @@
 {
-  "extends": "airbnb-base",
+  "extends": "eslint-config-egg",
   "rules": {
-    "indent": [2, 2],
-    "strict": 0,
-    "comma-dangle": 0,
-    "no-underscore-dangle": 0,
-    "no-param-reassign": 0,
-    "prefer-template": 0,
-    "no-plusplus": 0,
-    "no-unused-vars": ["error", { "argsIgnorePattern": "next" }],
-    "class-methods-use-this": 0,
-    "prefer-destructuring": 0,
-    "no-use-before-define": 0,
-    "arrow-parens": ["error", "as-needed"]
+    "array-bracket-spacing": 0,
+    "no-debugger": 0,
+    "arrow-parens": ["error", "as-needed"],
+    "strict": 0
   },
   "parserOptions": {
-    "ecmaVersion": 2017
+    "ecmaVersion": 2017,
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true
+    }
   }
 }
