--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -12,7 +12,8 @@ on:
 jobs:
   publish-npm:
     runs-on: ubuntu-latest
-    steps:
+    steps::
+      - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: 20
